# mcp-hub-next

./: .gitignore  CLAUDE.md  QUICK_START.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
__mocks__/: next-intl.ts
__mocks__/i18n/: routing.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.test.tsx  page.tsx
app/[locale]/: layout.tsx  not-found.tsx  page.tsx
app/chat/: error.tsx  page.tsx
app/developer/: error.tsx  page.tsx
app/marketplace/: error.tsx  loading.tsx  page.tsx
app/servers/: page.tsx
app/settings/: error.tsx  page.tsx
app/test-error/: page.tsx
components/chat/: chat-input.test.tsx  chat-input.tsx  chat-interface.test.tsx  chat-interface.tsx  chat-message.test.tsx  chat-message.tsx  chat-session-sidebar.test.tsx  chat-session-sidebar.tsx  (+12 more)
docs/: ERROR_HANDLING.md  ERROR_HANDLING_QUICK_REFERENCE.md  IDE_CONFIG_FEATURE_COMPLETION.md  IDE_CONFIG_TEST_CHECKLIST.md  SECURITY_AUDIT.md  TAURI_COMMANDS_USAGE.md
hooks/: use-mobile.test.ts
i18n/: next-intl.d.ts  request.ts  routing.ts
lib/: utils.test.ts
llmdoc/: index.md
messages/: en.json  zh-CN.json
scripts/: tauri-build.js
src/: proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: server.js
src-tauri/src/: file_dialogs.rs  ide_config.rs  lib.rs  mcp_installer.rs  mcp_lifecycle.rs  mcp_registry.rs  secure_storage.rs  storage.rs  updates.rs
src-tauri/tests/: integration_tests.rs
(+264 files in other folders)
