[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
keyring = "3"
dirs = "5"
chrono = { version = "0.4", features = ["clock", "serde"] }
regex = "1"
nanoid = "0.4"
tokio = { version = "1.40", features = ["time"] }

[dev-dependencies]
tempfile = "3.13"
mockall = "0.13"
serial_test = "3.1"
tokio = { version = "1.40", features = ["rt", "macros"] }
